--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8443
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fresh_db?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fresh?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=1123581321
+spring.datasource.password=your_database_password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = none
